project with routes

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "teste",
-    "slug": "teste",
+    "name": "teste123",
+    "slug": "teste123",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
