--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "teste",
+  "name": "teste123",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,32 +9,21 @@
     "web": "set NODE_OPTIONS=--openssl-legacy-provider && expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^0.17.0",
-    "@react-native-community/slider": "^4.4.3",
-    "@react-native-picker/picker": "^2.5.0",
-    "expo": "~49.0.6",
-    "expo-image-picker": "^14.3.2",
-    "expo-status-bar": "~1.6.0",
+    "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
+    "expo": "~49.0.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.3",
-    "react-native-loading-spinner-overlay": "^3.0.1",
-    "react-native-uuid": "^2.0.1",
-    "react-native-web": "~0.19.6",
-    "yup": "^1.2.0"
+    "react-native": "0.72.4",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^8.47.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-import": "^2.28.0",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-react": "^7.33.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "^3.0.1"
+    "@babel/core": "^7.20.0"
   },
   "private": true
 }
